Informe: traduce plantilla

--- a/CTE_InformeDBHE/resources/report.html.erb
+++ b/CTE_InformeDBHE/resources/report.html.erb
@@ -381,7 +381,7 @@
           <% end %>
 
           <% if section[:tables].size == 0 %>
-              <h5><i>No Data to Show for <%= section[:title] %></i></h5>
+              <h5><i>Sin datos que mostrar de <%= section[:title] %></i></h5>
           <% end %>
 
       <% end %>
