--- a/CTE_InformeDBHE/resources/report.html.erb
+++ b/CTE_InformeDBHE/resources/report.html.erb
@@ -1,5 +1,6 @@
+<%#-*- coding: utf-8 -*-%>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
