--- a/OS_Report_SI/resources/report.html.erb
+++ b/OS_Report_SI/resources/report.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OpenStudio Results</title>
+  <title>OpenStudio Results SI</title>
   <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="file:///<%= web_asset_path %>/bootstrap.min.css" rel="stylesheet">
 
@@ -119,7 +119,7 @@
       </div>
     </div>
     <div class="col-md-9" role="main">
-      <h1>OpenStudio Results</h1>
+      <h1>OpenStudio Results (SI units)</h1>
       <% chart_index = table_index = 0 %>
       <% @sections.each do |section| %>
           <h2 id="<%= section[:title].gsub(' ', '_').gsub('/', '_') %>"><%= section[:title] %></h2>
